ibuilder/tests/not_compile/unknown_attribute2.stderr
error: unknown attribute
 --> $DIR/unknown_attribute2.rs:5:16
  |
5 |     #[ibuilder(wibble_monster)]
  |                ^^^^^^^^^^^^^^

error: unknown attribute
  --> $DIR/unknown_attribute2.rs:10:12
   |
10 | #[ibuilder(wibble_monster)]
   |            ^^^^^^^^^^^^^^

error: unknown attribute
  --> $DIR/unknown_attribute2.rs:16:12
   |
16 | #[ibuilder(wibble_monster)]
   |            ^^^^^^^^^^^^^^

error: unknown attribute
  --> $DIR/unknown_attribute2.rs:23:16
   |
23 |     #[ibuilder(wibble_monster)]
   |                ^^^^^^^^^^^^^^
